--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,31 @@
-.container {
-  max-width: 1080px;
-  margin: 20px auto;
+.header {
+  height: 40px;
+  text-align: center;
+  box-shadow: 6px 2px 6px 0 rgb(165, 165, 209);
+}
+
+.header_nav {
+  font-size: 1.2rem;
+  position: sticky;
+  padding: 0.2rem;
+}
+
+main {
+  max-width: 600px;
+  min-width: 300px;
+  height: auto;
+  margin: 2rem auto;
+  padding: 0 1rem 1rem;
+}
+
+.footer {
+  margin: 0 auto;
+  width: 100vw;
+  text-align: center;
+  height: 30px;
+  padding: 0.4rem;
+  position: fixed;
+  bottom: 0;
+  background-color: #031927;
+  color: #c8e0f4;
 }
