--- a/src/components/current-weather/CurrentWeather.css
+++ b/src/components/current-weather/CurrentWeather.css
@@ -1,11 +1,14 @@
 .weather {
-  width: 300px;
-  border-radius: 6px;
-  box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
-  color: #fff;
-  background-color: #333;
-  margin: 20px auto 0 auto;
-  padding: 0 20px 20px 20px;
+  width: 340px;
+  border-radius: 8px;
+  box-shadow: 2px 4px 8px 2px rgba(77, 77, 77, 0.697);
+  color: #1b2838;
+  background: linear-gradient(
+    rgba(159, 253, 253, 0.771),
+    rgba(179, 179, 255, 0.743)
+  );
+  margin: 20px auto 20px auto;
+  padding: 0 20px 28px 20px;
 }
 
 .top,
@@ -36,7 +39,7 @@
 
 .temperature {
   font-weight: 600;
-  font-size: 70px;
+  font-size: 60px;
   width: auto;
   letter-spacing: 1px;
   margin: 10px 0;
