--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -1,6 +1,8 @@
 .title {
-  font-size: 23px;
+  font-size: 24px;
   font-weight: 700;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .daily-item {
